# Evidence-Gated-Memory

./: .env.example  .gitignore  CHANGELOG.md  HANDOFF.md  HANDOFF_TO_CODEX.md  README.md  plan.md  pyproject.toml  results_tau2_0_29.json  results_tau_v1_0_29.json
benchmarks/: README.md  __init__.py  adversarial_probes.py  local_benchmarks.py  run_local.py  scenario_probes.py
docs/: adapter-contract.md  architecture.md  benchmark-decision-protocol.md  benchmark-philosophy.md  dag-invariants.md  generic-agent-loop.md  long-term-candidate-gate.md  production.md  release-criteria.md  schema-authoring.md  security.md
examples/: coding_minimal.py  generic_refund_agent.py  refund_minimal.py  ticket_minimal.py
reports/: benchmark_report.md  deterministic_benchmark_snapshot.json  deterministic_benchmark_snapshot.md  industry_benchmarks_smoke.json  local_benchmarks_latest.json  memory_agent_bench_accurate_retrieval_full.json  memory_agent_bench_accurate_retrieval_medium.json  memory_agent_bench_accurate_retrieval_smoke.json  memory_agent_bench_conflict_full.json  memory_agent_bench_conflict_smoke.json  memory_agent_bench_long_range_understanding_medium.json  memory_agent_bench_test_time_learning_full.json  memory_agent_bench_test_time_learning_smoke.json
scripts/: generate_benchmark_snapshot.py  scan_secrets.py  smoke_install.py
tests/: conftest.py  test_adapter_metadata.py  test_benchmark_snapshot.py  test_benchmarks.py  test_cascade.py  test_cli.py  test_commit_protection.py  test_context_long_term_memory.py  test_context_task_map.py  test_critical_expiry.py  (+25 more)
(+30 files in other folders)
